--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>chocolate pizza</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <header>
@@ -19,28 +23,34 @@
             <img src="/img/insta-icon.png" alt="">
             <img src="/img/flic-icon.png" alt="">
             <img src="/img/pint-icon.png" alt="">
-            <img src="/img/rss-icon.png" alt="">
-            <img src="/img/mail-icon.png" alt="">
+            <img src="/img/rss-icon.png" class="left"alt="">
+            <img src="/img/mail-icon.png"  alt="">
         </div>
     </nav>
+    <div class="imgrepeat">
     <img class="repeat" src="/img/hr-img.png" alt="">
+    </div>
     </header>
     <main>
         <h2>Chocolate Pizza</h2>
-        <p>POSTED ON 15 OEC 2013 / DESSERTS</p>
-        <img src="/img/print-icon.png" alt="">
-        <p>PRINT</p>
-        <img src="/img/choco-pizza.png" alt="">
-        <p class="big prg">
-          &nbsp; For the fig-swirl:Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside an dlet cool completely.
+        <div id="print">
+            <!-- <img src="/img/print-icon.png"  class="print" alt=""> -->
+            <p>POSTED ON 15 OEC 2013 / DESSERTS</p>
+        <span class="print">PRINT</span>
+        <img src="/img/print-icon.png"  class="print" alt="">
+        </div>
+        <img src="/img/choco-pizza.png" class="pizza" alt="">
+        <p class="bigprg">
+          &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; For the fig-swirl:Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside an dlet cool completely.
         </p>
-        <p class="big prg">
-            &nbsp; Ice cream:In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm.Wish in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.
+        <p class="bigprg">
+            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Ice cream:In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm.Wish in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.
         </p>
-        <p class="big prg">
-            &nbsp; Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions,i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts.Countinue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware.Freeze for at least twohours before serving.
+        <p class="bigprg">
+            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions,i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts.Countinue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware.Freeze for at least twohours before serving.
         </p>
-        <img src="/img/list-bg.png" alt="">
+        <div id="float">
+        <img src="/img/list-bg.png" id="list" alt="">
         <section class="sec1">
         <input type="checkbox" id="milk" name="milk" value="true">
         <label for="milk">1 1/2 cups milk</label><br>
@@ -69,20 +79,23 @@
         <input type="checkbox" id="honey" name="honey" value="true">
         <label for="honey">1 cup honey roasted pecans, roughly chopped</label><br>
        </section>
+    </div>
+       <div class="imgrepeat">
        <img class="repeat" src="/img/hr-img.png" alt="">
-
+        </div>
     </main>
     <footer>
+        <div id="van">
         <img src="/img/van-pic.png" alt="">
         <p id="name">Vanessa Stevenos</p>
-        <p>Food enthusiast, photography fun, Add a pinch of raw foodsim and that's pretty much how I am.</p>
+        <p id="aboutvan">Food enthusiast, photography fun, Add a pinch of raw foodsim and that's pretty much how I am.</p>
         <button>SHARE RECIPE</button>
+        </div>
+        <div id="copy">
         <img src="/img/small-logo.png" alt="">
         <p>Delicious &copy; 2013 . All Rights Reserved. <br>
             Proudly published with Ghost.</p>
-            
-
+        </div>
     </footer>
-    
 </body>
 </html>
